# 2D-energy-histogram

./: README.md  feature_engineering_scheme.tif
CIF_APMs/: README  force_field_mixing_rules.def  textprop_apm.csv
Data/Barplot_data/: Final_results.xlsx
Data/Example_RASPA_simulation_files/: force_field_mixing_rules.def  pseudo_atoms.def
Data/Example_gcmc_data_file_for_ML_workflow/: gcmc_Kr_273K_1Bar_cm3cm3_combined.txt
Data/Example_simulation_files/: 10041.cif  simulation.input
Data/Trained_ML_models/: README.md
Energy_EnergyGradients_generator/: Makefile  README  README.md
Energy_EnergyGradients_generator/src/: CMakeLists.txt  config_ob_data.h.cmake  energyhist.cpp  hi.cpp  supercell.cpp  supercell.h
Energy_EnergyGradients_generator/src/forcefield/: readme
Energy_EnergyGradients_generator/src/forcefield/UFF/: force_field_mixing_rules.def
Energy_EnergyGradients_generator/src/forcefield/tobmof-XeKr/: force_field_mixing_rules.def
Example_data/Barplot_data/: Final_results_for_making figures for presentation.xlsx
Example_data/Example_RASPA_simulation_files/: output_10041_1.1.1_495.600000_1e+06.data
Example_data/Example_data_files_for_ML_workflow/: summary.txt
Python_scripts/: LJ-energygrid.py  README  README.md  grids_parallel.py  minCell_strict.py  persistent_homology_demo.py  persistent_homology_parallel.py  zeopp_bulk_calc_parallel.py
R_src/: README  README.md  analyze_functions.R  data_process.R  main_bias_var_tradeoff.R  main_diagnose.R  main_ml_2dhist.R  main_model_test.R  main_prep_2dhist.R  make_plot.R  ml_functions.R  nn_hypertunning.R  package_verification.R  read_files.R
R_src_for_visualization/: .Rhistory  README.md  analyze_functions.R  data_process.R  main_prep_2dhist.R  make_plot.R  package_verification.R  read_files.R  tdhist_Kr_example.rds
R_src_for_visualization/example_input/: ener_grad_Kr_norm_0.5A.txt
